--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-
+p{
+    font-family: Roboto Mono;
+    color: blue;
+}
+html{
+    background-color: #3a3b41;
+}
+h6{
+    font-size: small;
+}
+body{
+    b
+}
